--- a/Session7/Session7.ipynb
+++ b/Session7/Session7.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,11 +29,21 @@
     "    \"Contains < 50 characters in DocString\"\n",
     "\n",
     "def strlen(fn):\n",
-    "    length = 50\n",
+    "    \"\"\"strlen takes in a function as a argument. It contains a closure function which checks whether the function \n",
+    "      in the argument has a DocString which is more than 50 characters in length\n",
+    "      \n",
+    "      Input : Function Name\n",
+    "      Output : Prints whether the Function sent as argument contains a Docstring which has more than 50 characters\"\"\"\n",
+    "    \n",
+    "    length = 50                 # length is a free variable\n",
     "    \n",
     "    def nChars():\n",
+    "        \"\"\"\n",
+    "         This is a closure function which checks whether the input function contains a Docstring > 50 characters        \n",
+    "        \"\"\"\n",
+    "        \n",
     "        nonlocal length\n",
-    "        if (len(fn.__doc__) > length):\n",
+    "        if (len(fn.__doc__) > length):             #fn.__doc__ provides the docstring of the function which is passed\n",
     "            print(\"Length of DocString is more than 50 characters\")\n",
     "        else:\n",
     "            print(\"Length of DocString is less than 50 characters\")\n",
@@ -41,9 +51,12 @@
     "        return fn()\n",
     "    return nChars \n",
     "\n",
+    "\n",
+    "# Checking whether the first function has a docstring > 50 characters\n",
     "fn = strlen(fun1)\n",
     "fn()\n",
     "\n",
+    "# Checking whether the first function has a docstring > 50 characters\n",
     "fn = strlen(fun2)\n",
     "fn()"
    ]
@@ -57,58 +70,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fib():\n",
-    "    num1, num2, count = 0,1,0\n",
-    "    def nxtfib():\n",
-    "        nonlocal count, num1, num2\n",
-    "        if count == 0:\n",
-    "            print(f'Fibonacci Number {count+1} is {num1}')\n",
-    "            count +=1\n",
-    "            return num1\n",
-    "        elif count == 1:\n",
-    "            print(f'Fibonacci Number {count+1} is {num2}')\n",
-    "            count +=1\n",
-    "            return num2\n",
-    "        else:\n",
-    "            fib = num1+num2\n",
-    "            print(f'Fibonacci Number {count+1} is {fib}')\n",
-    "            count+=1\n",
-    "            num1, num2 = num2, fib\n",
-    "            return fib\n",
-    "    return nxtfib\n",
-    "\n",
-    "fibonacci = fib()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fibonacci Number 2 is 1\n"
+      "Fibonacci Number 1 is 0\n",
+      "0\n",
+      "Fibonacci Number 2 is 1\n",
+      "1\n",
+      "Fibonacci Number 3 is 1\n",
+      "1\n",
+      "Fibonacci Number 4 is 2\n",
+      "2\n",
+      "Fibonacci Number 5 is 3\n",
+      "3\n",
+      "Fibonacci Number 6 is 5\n",
+      "5\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "fibonacci()"
+    "def fib():\n",
+    "    \"\"\"\n",
+    "    This function generates the next fibonacci number using closure    \n",
+    "    \"\"\"\n",
+    "    num1, num2, count = 0,1,0   # Free Variables\n",
+    "    def nxtfib():\n",
+    "        nonlocal count, num1, num2\n",
+    "        if count == 0:\n",
+    "            #When called first time, 0 is printed --> First Fibonacci Number\n",
+    "            print(f'Fibonacci Number {count+1} is {num1}')\n",
+    "            count +=1\n",
+    "            return num1\n",
+    "        elif count == 1:\n",
+    "            #When called Second time, 1 is printed --> Second Fibonacci Number\n",
+    "            print(f'Fibonacci Number {count+1} is {num2}')\n",
+    "            count +=1\n",
+    "            return num2\n",
+    "        else:\n",
+    "            #After the first two times, the Fibonacci numbers are computed by adding the previous two numbers \n",
+    "            # and assignments made appropriately to calculate the next number\n",
+    "            fibo = num1+num2\n",
+    "            print(f'Fibonacci Number {count+1} is {fibo}')\n",
+    "            count+=1\n",
+    "            num1, num2 = num2, fibo\n",
+    "            return fibo\n",
+    "    return nxtfib\n",
+    "\n",
+    "fibonacci = fib()\n",
+    "\n",
+    "# Printing the fibonacci numbers\n",
+    "print (fibonacci())\n",
+    "print (fibonacci())\n",
+    "print (fibonacci())\n",
+    "print (fibonacci())\n",
+    "print (fibonacci())\n",
+    "print (fibonacci())"
    ]
   },
   {
@@ -120,39 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fnCounter={'add':0,'mul':0,'div':0}\n",
-    "def counter(fn):\n",
-    "    #cnt = 0\n",
-    "    def inner(*args, **kwargs):\n",
-    "        global fnCounter \n",
-    "        #cnt += 1\n",
-    "        fnCounter[fn.__name__]+=1\n",
-    "        #print(f'{fn.__name__} has been called {cnt} times')\n",
-    "        return fn(*args, **kwargs)\n",
-    "    return inner\n",
-    "\n",
-    "def add(a, b):\n",
-    "    return a + b\n",
-    "\n",
-    "def mul(a, b):\n",
-    "    return a*b\n",
-    "\n",
-    "def div(a, b):\n",
-    "    assert b!=0, \"Denominater should not be equal to 0\"\n",
-    "    return a/b\n",
-    "\n",
-    "c_add = counter(add)\n",
-    "c_mul = counter(mul)\n",
-    "c_div = counter(div)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -164,6 +152,40 @@
     }
    ],
    "source": [
+    "fnCounter={'add':0,'mul':0,'div':0}             # Global Dictionary to count the number of times the functions are called\n",
+    "def counter(fn):\n",
+    "    \"\"\"\n",
+    "    This function takes in a function and updates a global dictionary keeping track of how many times the \n",
+    "    functions add, mul or div is called with the help of closures\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def inner(*args, **kwargs):\n",
+    "        global fnCounter \n",
+    "        #cnt += 1\n",
+    "        fnCounter[fn.__name__]+=1\n",
+    "        #print(f'{fn.__name__} has been called {cnt} times')\n",
+    "        return fn(*args, **kwargs)\n",
+    "    return inner\n",
+    "\n",
+    "def add(a, b):\n",
+    "    \"\"\" Function to add two numbers\"\"\"\n",
+    "    return a + b\n",
+    "\n",
+    "def mul(a, b):\n",
+    "    \"\"\"Function to multiply 2 numbers\"\"\"\n",
+    "    return a*b\n",
+    "\n",
+    "def div(a, b):\n",
+    "    \"\"\"Function to divide two numbers where the denominator !=0 \"\"\"\n",
+    "    assert b!=0, \"Denominater should not be equal to 0\"\n",
+    "    return a/b\n",
+    "\n",
+    "c_add = counter(add)\n",
+    "c_mul = counter(mul)\n",
+    "c_div = counter(div)\n",
+    "\n",
+    "\n",
+    "# Calling the functions and printing number of times they are called\n",
     "c_add(1,0)\n",
     "c_mul(1,0)\n",
     "c_add(100,12)\n",
@@ -182,14 +204,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of times each operation occurs {'add': 1, 'mul': 1, 'div': 0} {'add': 1, 'mul': 0, 'div': 1} {'add': 0, 'mul': 0, 'div': 1}\n"
+     ]
+    }
+   ],
    "source": [
+    "## Three Global Dictionaries to count the number of times the functions are called\n",
     "fnCounter={'add':0,'mul':0,'div':0}\n",
     "fnCounter1={'add':0,'mul':0,'div':0}\n",
     "fnCounter2={'add':0,'mul':0,'div':0}\n",
+    "\n",
     "def counter(fn, fnCountDict):\n",
+    "    \"\"\"\n",
+    "    A function which takes as its input the function and the dictionary name. The values in the dictionary are \n",
+    "    updated by 1 when the function is called. Thus given a function and a dictionary as input the closure counts\n",
+    "    the number of times the function is called and updates the corresponding element in the dictionary\n",
+    "    \"\"\"\n",
     "    \n",
     "    def inner(*args, **kwargs):\n",
     "        nonlocal fnCountDict\n",
@@ -218,23 +255,10 @@
     "\n",
     "c_add2 = counter(add, fnCounter2)\n",
     "c_mul2 = counter(mul, fnCounter2)\n",
-    "c_div2 = counter(div, fnCounter2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of times each operation occurs {'add': 1, 'mul': 1, 'div': 0} {'add': 1, 'mul': 0, 'div': 1} {'add': 0, 'mul': 0, 'div': 1}\n"
-     ]
-    }
-   ],
-   "source": [
+    "c_div2 = counter(div, fnCounter2)\n",
+    "\n",
+    "\n",
+    "# Calling the functions and printing number of times they are called w.r.t each dictionary\n",
     "c_add(10,1), c_add1(20,20), c_mul(2,2),c_div2(2,3), c_div1(3,4)\n",
     "\n",
     "print(\"Number of times each operation occurs\", fnCounter, fnCounter1, fnCounter2)"
